--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,6 +1,8 @@
 \section{Discussion and Conclusion}\label{sec:conclusion}
 
-We have measured the local PNG parameter $\fnl$ using the angular clustering of LRGs selected from DESI imaging data. Our sample includes more than $12$ million targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation to infer the redshift distribution of our sample (Figure \ref{fig:nz}). In our fiducial analysis, we have obtained a maximum likelihood value of $\fnl=47$ with a significant probability that $\fnl$ is greater than zero, $P(\fnl>0)=99.9$ (Figure \ref{fig:mcmc_dr9} and Table \ref{tab:dr9methodcalib}). We have applied a series of robustness tests on the impact of how we estimate the selection function of our LRG sample, including: the methods (linear and nonlinear), the set of imaging systematic maps used (extinction, stellar density, depth in $grzW1$, psfsize in $grz$, and neutral hydrogen column density), and data quality cuts on the accepted regions. We find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly lower value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}). The only manner in which the significance of nonzero PNG decreases is due to the uncertainty on the measurement increasing when we employ more imaging systematic maps to the selection function estimation and by doing so remove large-scale clustering information (the effect of which on $\fnl$ recovery we have calibrated with mocks).
+We have measured the local PNG parameter $\fnl$ using the scale-dependent bias in the angular clustering of LRGs selected from the DESI Legacy Imaging Survey DR9. Our sample includes more than $12$ million LRG targets covering around $14,000$ square degrees in the redshift range of $0.2< z < 1.35$. We leverage early spectroscopy during DESI Survey Validation \citep{desi2023sv} to infer the redshift distribution of our sample (Figure \ref{fig:nz}). In our fiducial analysis, we have obtained a maximum likelihood value of $\fnl=47$ with a significant probability that $\fnl$ is greater than zero, $P(\fnl>0)=99.9$ (Figure \ref{fig:mcmc_dr9} and Table \ref{tab:dr9methodcalib}). 
+
+The signature of local PNG is very sensitive to excess clustering signals caused by imaging systematic effects. We have applied a series of robustness tests on the impact of how we estimate the selection function of our LRG sample, including: the methods (linear and nonlinear), the set of imaging systematic maps used (Galactic extinction, stellar density, depth in $grzW1$, psfsize in $grz$, and neutral hydrogen column density), and data quality cuts on the accepted regions. We find no change in the analysis that shifts the maximum likelihood value of $\fnl$ to a significantly lower value (Figure \ref{fig:mcmc_dr9reg}, Figure \ref{fig:mcmc_dr9elmin}, and Table \ref{tab:dr9method}). The only manner in which the significance of nonzero PNG decreases is due to the uncertainty on the measurement increasing when we employ more imaging systematic maps to the selection function estimation and by doing so remove large-scale clustering information (the effect of which on $\fnl$ recovery we have calibrated with mocks, as shown in Figure \ref{fig:fnlbias}).
 
 \begin{figure}
     \centering
@@ -9,7 +11,7 @@ We have measured the local PNG parameter $\fnl$ using the angular clustering of 
     \label{fig:fnlhist}
 \end{figure}
 
-When comparing our fiducial results to recent CMB and QSO measurements, as shown in Figure \ref{fig:fnlhist}, we find a significantly tension with CMB but consistent with LSS within $95\%$ confidence. Either we have measured an $\fnl$ signal that is inconsistent with CMB measurements or there is a hidden source of systematic contamination in our data, which cannot be mitigated with available imaging systematic maps. Internal DESI tests of the photometric calibration are unable to uncover DESI-specific issues, e.g., when comparing to Gaia data. The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such issues are generically likely to be proportional in amplitude to the estimated E(B-V), but may not strictly follow the estimated E(B-V). In order to explain the $\fnl$ signal we measure, such an effect would need to be approximately twice that of the trend we find with E(B-V). There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help discover if this is indeed the cause.
+When comparing our fiducial results to recent CMB and QSO measurements, as shown in Figure \ref{fig:fnlhist}, we find a significantly tension with CMB but consistent constraints with LSS within $95\%$ confidence. Either we have measured an $\fnl$ signal that is inconsistent with CMB measurements or there is a hidden source of systematic contamination in our data, which cannot be mitigated with available imaging systematic maps. Our analysis can be considered as the first attempt to identify major systematics in DESI, so we can be ready for constraining $\fnl$ with DESI spectroscopy. Internal DESI tests of the photometric calibration are unable to uncover DESI-specific issues, e.g., when comparing to Gaia data. The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such issues are generically likely to be proportional in amplitude to the estimated E(B-V), but may not strictly follow the estimated E(B-V). In order to explain the $\fnl$ signal we measure, such an effect would need to be approximately twice that of the trend we find with E(B-V). There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help discover if this is indeed the cause.
 
 
 %Discuss generic effect of calibration. Ask Rongpu if we can include the Gaia calibration test map, which shows patterns that look related to the Gaia scanning strategy, rather that Legacy Survey? (If not, we can just say something like "internal DESI tests of the photometric calibration are unable to uncover DESI-specific issues, e.g., when comparing to Gaia data") Then, something like "The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such issues are generically likely to be proportional in amplitude to the estimated E(B-V), but may not strictly follow the estimated E(B-V). In order to explain the fNL signal we measure, such an effect would need to be approximately twice that of the trend we find with E(B-V). There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help discover if this is indeed the cause. (Anything to say about Mudur et al. map? I think we need to write something. Perhaps for now just something like "a first look at the Mudur et al E(B-V) maps did not suggest including them would change our results" and then during CWR you could add Mudur-SFD as a map to test against?)"
