--- a/refs.bib
+++ b/refs.bib
@@ -1621,3 +1621,275 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@article{laurent2017clustering,
+  title={Clustering of quasars in SDSS-IV eBOSS: study of potential systematics and bias determination},
+  author={Laurent, Pierre and Eftekharzadeh, Sarah and Le Goff, Jean-Marc and Myers, Adam and Burtin, Etienne and White, Martin and Ross, Ashley J and Tinker, Jeremy and Tojeiro, Rita and Bautista, Julian and others},
+  journal={Journal of Cosmology and Astroparticle Physics},
+  volume={2017},
+  number={07},
+  pages={017},
+  year={2017},
+  publisher={IOP Publishing}
+}
+
+
+
+@ARTICLE{ashley2012MNRAS,
+   author = {{Ross}, A.~J. and {Percival}, W.~J. and {S{\'a}nchez}, A.~G. and 
+	{Samushia}, L. and {Ho}, S. and {Kazin}, E. and {Manera}, M. and 
+	{Reid}, B. and {White}, M. and {Tojeiro}, R. and {McBride}, C.~K. and 
+	{Xu}, X. and {Wake}, D.~A. and {Strauss}, M.~A. and {Montesano}, F. and 
+	{Swanson}, M.~E.~C. and {Bailey}, S. and {Bolton}, A.~S. and 
+	{Dorta}, A.~M. and {Eisenstein}, D.~J. and {Guo}, H. and {Hamilton}, J.-C. and 
+	{Nichol}, R.~C. and {Padmanabhan}, N. and {Prada}, F. and {Schlegel}, D.~J. and 
+	{Maga{\~n}a}, M.~V. and {Zehavi}, I. and {Blanton}, M. and {Bizyaev}, D. and 
+	{Brewington}, H. and {Cuesta}, A.~J. and {Malanushenko}, E. and 
+	{Malanushenko}, V. and {Oravetz}, D. and {Parejko}, J. and {Pan}, K. and 
+	{Schneider}, D.~P. and {Shelden}, A. and {Simmons}, A. and {Snedden}, S. and 
+	{Zhao}, G.-b.},
+    title = "{The clustering of galaxies in the SDSS-III Baryon Oscillation Spectroscopic Survey: analysis of potential systematics}",
+  journal = {MNRAS},
+archivePrefix = "arXiv",
+   eprint = {1203.6499},
+ keywords = {cosmology: observations, distance scale, large-scale structure of Universe},
+     year = 2012,
+    month = jul,
+   volume = 424,
+    pages = {564-590},
+      doi = {10.1111/j.1365-2966.2012.21235.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.424..564R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2012ApJ...761...14H,
+   author = {{Ho}, S. and {Cuesta}, A. and {Seo}, H.-J. and {de Putter}, R. and 
+	{Ross}, A.~J. and {White}, M. and {Padmanabhan}, N. and {Saito}, S. and 
+	{Schlegel}, D.~J. and {Schlafly}, E. and {Seljak}, U. and {Hern{\'a}ndez-Monteagudo}, C. and 
+	{S{\'a}nchez}, A.~G. and {Percival}, W.~J. and {Blanton}, M. and 
+	{Skibba}, R. and {Schneider}, D. and {Reid}, B. and {Mena}, O. and 
+	{Viel}, M. and {Eisenstein}, D.~J. and {Prada}, F. and {Weaver}, B.~A. and 
+	{Bahcall}, N. and {Bizyaev}, D. and {Brewinton}, H. and {Brinkman}, J. and 
+	{Nicolaci da Costa}, L. and {Gott}, J.~R. and {Malanushenko}, E. and 
+	{Malanushenko}, V. and {Nichol}, B. and {Oravetz}, D. and {Pan}, K. and 
+	{Palanque-Delabrouille}, N. and {Ross}, N.~P. and {Simmons}, A. and 
+	{de Simoni}, F. and {Snedden}, S. and {Yeche}, C.},
+    title = "{Clustering of Sloan Digital Sky Survey III Photometric Luminous Galaxies: The Measurement, Systematics, and Cosmological Implications}",
+  journal = {APJ},
+archivePrefix = "arXiv",
+   eprint = {1201.2137},
+ keywords = {cosmological parameters, dark energy, dark matter, distance scale},
+     year = 2012,
+    month = dec,
+   volume = 761,
+      eid = {14},
+    pages = {14},
+      doi = {10.1088/0004-637X/761/1/14},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...761...14H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Raichoor2017MNRAS.471.3955R,
+   author = {{Raichoor}, A. and {Comparat}, J. and {Delubac}, T. and {Kneib}, J.-P. and 
+	{Y{\`e}che}, C. and {Dawson}, K.~S. and {Percival}, W.~J. and 
+	{Dey}, A. and {Lang}, D. and {Schlegel}, D.~J. and {Gorgoni}, C. and 
+	{Bautista}, J. and {Brownstein}, J.~R. and {Mariappan}, V. and 
+	{Seo}, H.-J. and {Tinker}, J.~L. and {Ross}, A.~J. and {Wang}, Y. and 
+	{Zhao}, G.-B. and {Moustakas}, J. and {Palanque-Delabrouille}, N. and 
+	{Jullo}, E. and {Newmann}, J.~A. and {Prada}, F. and {Zhu}, G.~B.
+	},
+    title = "{The SDSS-IV extended Baryon Oscillation Spectroscopic Survey: final emission line galaxy target selection}",
+  journal = {MNRAS},
+archivePrefix = "arXiv",
+   eprint = {1704.00338},
+ keywords = {methods: data analysis, galaxies: distances and redshifts, galaxies: photometry, galaxies: stellar content, large-scale structure of Universe, cosmology: observations},
+     year = 2017,
+    month = nov,
+   volume = 471,
+    pages = {3955-3973},
+      doi = {10.1093/mnras/stx1790},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.471.3955R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Elvin18,
+   author = {{Elvin-Poole}, J. and {Crocce}, M. and {Ross}, A.~J. and {Giannantonio}, T. and 
+	{Rozo}, E. and {Rykoff}, E.~S. and {Avila}, S. and {Banik}, N. and 
+	{Blazek}, J. and {Bridle}, S.~L. and {Cawthon}, R. and {Drlica-Wagner}, A. and 
+	{Friedrich}, O. and {Kokron}, N. and {Krause}, E. and {MacCrann}, N. and 
+	{Prat}, J. and {S{\'a}nchez}, C. and {Secco}, L.~F. and {Sevilla-Noarbe}, I. and 
+	{Troxel}, M.~A. and {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and 
+	{Allam}, S. and {Annis}, J. and {Asorey}, J. and {Bechtol}, K. and 
+	{Becker}, M.~R. and {Benoit-L{\'e}vy}, A. and {Bernstein}, G.~M. and 
+	{Bertin}, E. and {Brooks}, D. and {Buckley-Geer}, E. and {Burke}, D.~L. and 
+	{Carnero Rosell}, A. and {Carollo}, D. and {Carrasco Kind}, M. and 
+	{Carretero}, J. and {Castander}, F.~J. and {Cunha}, C.~E. and 
+	{D'Andrea}, C.~B. and {da Costa}, L.~N. and {Davis}, T.~M. and 
+	{Davis}, C. and {Desai}, S. and {Diehl}, H.~T. and {Dietrich}, J.~P. and 
+	{Dodelson}, S. and {Doel}, P. and {Eifler}, T.~F. and {Evrard}, A.~E. and 
+	{Fernandez}, E. and {Flaugher}, B. and {Fosalba}, P. and {Frieman}, J. and 
+	{Garc{\'{\i}}a-Bellido}, J. and {Gaztanaga}, E. and {Gerdes}, D.~W. and 
+	{Glazebrook}, K. and {Gruen}, D. and {Gruendl}, R.~A. and {Gschwend}, J. and 
+	{Gutierrez}, G. and {Hartley}, W.~G. and {Hinton}, S.~R. and 
+	{Honscheid}, K. and {Hoormann}, J.~K. and {Jain}, B. and {James}, D.~J. and 
+	{Jarvis}, M. and {Jeltema}, T. and {Johnson}, M.~W.~G. and {Johnson}, M.~D. and 
+	{King}, A. and {Kuehn}, K. and {Kuhlmann}, S. and {Kuropatkin}, N. and 
+	{Lahav}, O. and {Lewis}, G. and {Li}, T.~S. and {Lidman}, C. and 
+	{Lima}, M. and {Lin}, H. and {Macaulay}, E. and {March}, M. and 
+	{Marshall}, J.~L. and {Martini}, P. and {Melchior}, P. and {Menanteau}, F. and 
+	{Miquel}, R. and {Mohr}, J.~J. and {M{\"o}ller}, A. and {Nichol}, R.~C. and 
+	{Nord}, B. and {O'Neill}, C.~R. and {Percival}, W.~J. and {Petravick}, D. and 
+	{Plazas}, A.~A. and {Romer}, A.~K. and {Sako}, M. and {Sanchez}, E. and 
+	{Scarpine}, V. and {Schindler}, R. and {Schubnell}, M. and {Sheldon}, E. and 
+	{Smith}, M. and {Smith}, R.~C. and {Soares-Santos}, M. and {Sobreira}, F. and 
+	{Sommer}, N.~E. and {Suchyta}, E. and {Swanson}, M.~E.~C. and 
+	{Tarle}, G. and {Thomas}, D. and {Tucker}, B.~E. and {Tucker}, D.~L. and 
+	{Uddin}, S.~A. and {Vikram}, V. and {Walker}, A.~R. and {Wechsler}, R.~H. and 
+	{Weller}, J. and {Wester}, W. and {Wolf}, R.~C. and {Yuan}, F. and 
+	{Zhang}, B. and {Zuntz}, J. and {DES Collaboration}},
+    title = "{Dark Energy Survey year 1 results: Galaxy clustering for combined probes}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {1708.01536},
+     year = 2018,
+    month = aug,
+   volume = 98,
+   number = 4,
+      eid = {042006},
+    pages = {042006},
+      doi = {10.1103/PhysRevD.98.042006},
+   adsurl = {http://adsabs.harvard.edu/abs/2018PhRvD..98d2006E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@article{delubac2016sdss,
+  title={The SDSS-IV eBOSS: Emission Line Galaxy Catalogs at≈ 0.8 and study of systematic errors in the angular clustering},
+  author={Delubac, T and Raichoor, A and Comparat, J and Jouvel, S and Kneib, J-P and Y{\`e}che, C and Zou, H and Brownstein, JR and Abdalla, FB and Dawson, K and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  pages={stw2741},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
+
+
+@ARTICLE{2018ApJ...863..110B,
+       author = {{Bautista}, Julian E. and {Vargas-Maga{\~n}a}, Mariana and
+         {Dawson}, Kyle S. and {Percival}, Will J. and {Brinkmann}, Jonathan and
+         {Brownstein}, Joel and {Camacho}, Benjamin and {Comparat}, Johan and
+         {Gil-Mar{\'\i}n}, Hector and {Mueller}, Eva-Maria and
+         {Newman}, Jeffrey A. and {Prakash}, Abhishek and {Ross}, Ashley J. and
+         {Schneider}, Donald P. and {Seo}, Hee-Jong and {Tinker}, Jeremy and
+         {Tojeiro}, Rita and {Zhai}, Zhongxu and {Zhao}, Gong-Bo},
+        title = "{The SDSS-IV Extended Baryon Oscillation Spectroscopic Survey: Baryon Acoustic Oscillations at Redshift of 0.72 with the DR14 Luminous Red Galaxy Sample}",
+      journal = {\apj},
+     keywords = {distance scale, large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = aug,
+       volume = {863},
+       number = {1},
+          eid = {110},
+        pages = {110},
+          doi = {10.3847/1538-4357/aacea5},
+archivePrefix = {arXiv},
+       eprint = {1712.08064},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...863..110B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Ross17,
+   author = {{Ross}, A.~J. and {Beutler}, F. and {Chuang}, C.-H. and {Pellejero-Ibanez}, M. and 
+	{Seo}, H.-J. and {Vargas-Maga{\~n}a}, M. and {Cuesta}, A.~J. and 
+	{Percival}, W.~J. and {Burden}, A. and {S{\'a}nchez}, A.~G. and 
+	{Grieb}, J.~N. and {Reid}, B. and {Brownstein}, J.~R. and {Dawson}, K.~S. and 
+	{Eisenstein}, D.~J. and {Ho}, S. and {Kitaura}, F.-S. and {Nichol}, R.~C. and 
+	{Olmstead}, M.~D. and {Prada}, F. and {Rodr{\'{\i}}guez-Torres}, S.~A. and 
+	{Saito}, S. and {Salazar-Albornoz}, S. and {Schneider}, D.~P. and 
+	{Thomas}, D. and {Tinker}, J. and {Tojeiro}, R. and {Wang}, Y. and 
+	{White}, M. and {Zhao}, G.-b.},
+    title = "{The clustering of galaxies in the completed SDSS-III Baryon Oscillation Spectroscopic Survey: observational systematics and baryon acoustic oscillations in the correlation function}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1607.03145},
+ keywords = {cosmology: observations, large-scale structure of Universe},
+     year = 2017,
+    month = jan,
+   volume = 464,
+    pages = {1168-1191},
+      doi = {10.1093/mnras/stw2372},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.464.1168R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{kong2020,
+    author = {Kong, Hui and Burleigh, Kaylan J and Ross, Ashley and Moustakas, John and Chuang, Chia-Hsun and Comparat, Johan and deÂ Mattia, Arnaud and duÂ MasÂ desÂ Bourboux, HÃ©lion and Honscheid, Klaus and Lin, Sichen and Raichoor, Anand and Rossi, Graziano and Zhao, Cheng},
+    title = "{Removing imaging systematics from galaxy clustering measurements with Obiwan: application to the SDSS-IV extended Baryon Oscillation Spectroscopic Survey emission-line galaxy sample}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {499},
+    number = {3},
+    pages = {3943-3960},
+    year = {2020},
+    month = {09},
+    abstract = "{This work presents the application of a new tool, Obiwan, which uses image simulations to determine the selection function of a galaxy redshift survey and calculate three-dimensional (3D) clustering statistics. Obiwan relies on a forward model of the process by which images of the night sky are transformed into a 3D large-scale structure catalogue, and offers several advantages over more traditional map-based techniques â€“ such as operating on individual exposures and adopting a maximum likelihood approach. The photometric pipeline automatically detects and models galaxies and then generates a catalogue of such galaxies with detailed information for each one of them, including their location, redshift, and so on. Systematic biases in the imaging data are therefore imparted into the catalogues and must be accounted for in any scientific analysis of their information content. Obiwan simulates this process for samples selected from the Legacy Surveys imaging data. This imaging data will be used to select target samples for the next-generation Dark Energy Spectroscopic Instrument (DESI) experiment. Here, we apply Obiwan to a portion of the SDSS-IV extended Baryon Oscillation Spectroscopic Survey emission-line galaxies (ELGs). Systematic biases in the data are clearly identified and removed. We compare the 3D clustering results to those obtained by the map-based approach applied to the complete eBOSS Data Release 16 (DR16) sample. We find the results are consistent, thereby validating the eBOSS DR16 ELG catalogues, which is used to obtain cosmological results.}",
+    issn = {0035-8711},
+    doi = {10.1093/mnras/staa2742},
+    url = {https://doi.org/10.1093/mnras/staa2742},
+    eprint = {https://academic.oup.com/mnras/article-pdf/499/3/3943/34082934/staa2742.pdf},
+}
+
+
+@article{suchyta2016,
+    author = {Suchyta, E. and Huff, E. M. and AleksiÄ‡, J. and Melchior, P. and Jouvel, S. and MacCrann, N. and Ross, A. J. and Crocce, M. and Gaztanaga, E. and Honscheid, K. and Leistedt, B. and Peiris, H.V. and Rykoff, E. S. and Sheldon, E. and Abbott, T. and Abdalla, F. B. and Allam, S. and Banerji, M. and Benoit-LÃ©vy, A. and Bertin, E. and Brooks, D. and Burke, D. L. and Rosell, A. Carnero and Kind, M. Carrasco and Carretero, J. and Cunha, C. E. and D'Andrea, C. B. and daÂ Costa, L. N. and DePoy, D. L. and Desai, S. and Diehl, H. T. and Dietrich, J. P. and Doel, P. and Eifler, T. F. and Estrada, J. and Evrard, A. E. and Flaugher, B. and Fosalba, P. and Frieman, J. and Gerdes, D. W. and Gruen, D. and Gruendl, R. A. and James, D. J. and Jarvis, M. and Kuehn, K. and Kuropatkin, N. and Lahav, O. and Lima, M. and Maia, M. A. G. and March, M. and Marshall, J. L. and Miller, C. J. and Miquel, R. and Neilsen, E. and Nichol, R. C. and Nord, B. and Ogando, R. and Percival, W. J. and Reil, K. and Roodman, A. and Sako, M. and Sanchez, E. and Scarpine, V. and Sevilla-Noarbe, I. and Smith, R. C. and Soares-Santos, M. and Sobreira, F. and Swanson, M. E. C. and Tarle, G. and Thaler, J. and Thomas, D. and Vikram, V. and Walker, A. R. and Wechsler, R. H. and Zhang, Y.},
+    title = "{No galaxy left behind: accurate measurements with the faintest objects in the Dark Energy Survey}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {457},
+    number = {1},
+    pages = {786-808},
+    year = {2016},
+    month = {01},
+    abstract = "{Accurate statistical measurement with large imaging surveys has traditionally required throwing away a sizable fraction of the data. This is because most measurements have relied on selecting nearly complete samples, where variations in the composition of the galaxy population with seeing, depth, or other survey characteristics are small. We introduce a new measurement method that aims to minimize this wastage, allowing precision measurement for any class of detectable stars or galaxies. We have implemented our proposal in balrog, software which embeds fake objects in real imaging to accurately characterize measurement biases. We demonstrate this technique with an angular clustering measurement using Dark Energy Survey (DES) data. We first show that recovery of our injected galaxies depends on a variety of survey characteristics in the same way as the real data. We then construct a flux-limited sample of the faintest galaxies in DES, chosen specifically for their sensitivity to depth and seeing variations. Using the synthetic galaxies as randoms in the Landyâ€“Szalay estimator suppresses the effects of variable survey selection by at least two orders of magnitude. With this correction, our measured angular clustering is found to be in excellent agreement with that of a matched sample from much deeper, higher resolution space-based Cosmological Evolution Survey (COSMOS) imaging; over angular scales of 0\\$\_\\{.\\}^\\{\\circ\\}\\$004Â \\&lt;Â Î¸Â \\&lt;Â 0\\$\_\\{.\\}^\\{\\circ\\}\\$2, we find a best-fitting scaling amplitude between the DES and COSMOS measurements of 1.00 Â± 0.09. We expect this methodology to be broadly useful for extending measurementsâ€™ statistical reach in a variety of upcoming imaging surveys.}",
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stv2953},
+    url = {https://doi.org/10.1093/mnras/stv2953},
+    eprint = {https://academic.oup.com/mnras/article-pdf/457/1/786/18167862/stv2953.pdf},
+}
+
+
+@article{Everett_2022,
+doi = {10.3847/1538-4365/ac26c1},
+url = {https://dx.doi.org/10.3847/1538-4365/ac26c1},
+year = {2022},
+month = {jan},
+publisher = {The American Astronomical Society},
+volume = {258},
+number = {1},
+pages = {15},
+author = {S. Everett and B. Yanny and N. Kuropatkin and E. M. Huff and Y. Zhang and J. Myles and A. Masegian and J. Elvin-Poole and S. Allam and G. M. Bernstein and I. Sevilla-Noarbe and M. Splettstoesser and E. Sheldon and M. Jarvis and A. Amon and I. Harrison and A. Choi and W. G. Hartley and A. Alarcon and C. Sánchez and D. Gruen and K. Eckert and J. Prat and M. Tabbutt and V. Busti and M. R. Becker and N. MacCrann and H. T. Diehl and D. L. Tucker and E. Bertin and T. Jeltema and A. Drlica-Wagner and R. A. Gruendl and K. Bechtol and A. Carnero Rosell and T. M. C. Abbott and M. Aguena and J. Annis and D. Bacon and S. Bhargava and D. Brooks and D. L. Burke and M. Carrasco Kind and J. Carretero and F. J. Castander and C. Conselice and M. Costanzi and L. N. da Costa and M. E. S. Pereira and J. De Vicente and J. DeRose and S. Desai and T. F. Eifler and A. E. Evrard and I. Ferrero and P. Fosalba and J. Frieman and J. García-Bellido and E. Gaztanaga and D. W. Gerdes and G. Gutierrez and S. R. Hinton and D. L. Hollowood and K. Honscheid and D. Huterer and D. J. James and S. Kent and E. Krause and K. Kuehn and O. Lahav and M. Lima and H. Lin and M. A. G. Maia and J. L. Marshall and P. Melchior and F. Menanteau and R. Miquel and J. J. Mohr and R. Morgan and J. Muir and R. L. C. Ogando and A. Palmese and F. Paz-Chinchón and A. A. Plazas and M. Rodriguez-Monroy and A. K. Romer and A. Roodman and E. Sanchez and V. Scarpine and S. Serrano and M. Smith and M. Soares-Santos and E. Suchyta and M. E. C. Swanson and G. Tarle and C. To and M. A. Troxel and T. N. Varga and J. Weller and R. D. Wilkinson and (DES Collaboration)},
+title = {Dark Energy Survey Year 3 Results: Measuring the Survey Transfer Function with Balrog},
+journal = {The Astrophysical Journal Supplement Series},
+abstract = {We describe an updated calibration and diagnostic framework, Balrog, used to directly sample the selection and photometric biases of the Dark Energy Survey (DES) Year 3 (Y3) data set. We systematically inject onto the single-epoch images of a random 20\% subset of the DES footprint an ensemble of nearly 30 million realistic galaxy models derived from DES Deep Field observations. These augmented images are analyzed in parallel with the original data to automatically inherit measurement systematics that are often too difficult to capture with generative models. The resulting object catalog is a Monte Carlo sampling of the DES transfer function and is used as a powerful diagnostic and calibration tool for a variety of DES Y3 science, particularly for the calibration of the photometric redshifts of distant “source” galaxies and magnification biases of nearer “lens” galaxies. The recovered Balrog injections are shown to closely match the photometric property distributions of the Y3 GOLD catalog, particularly in color, and capture the number density fluctuations from observing conditions of the real data within 1\% for a typical galaxy sample. We find that Y3 colors are extremely well calibrated, typically within ∼1–8 mmag, but for a small subset of objects, we detect significant magnitude biases correlated with large overestimates of the injected object size due to proximity effects and blending. We discuss approaches to extend the current methodology to capture more aspects of the transfer function and reach full coverage of the survey footprint for future analyses.}
+}
+
+@article{Eggert_2023,
+doi = {10.3847/1538-4365/acb440},
+url = {https://dx.doi.org/10.3847/1538-4365/acb440},
+year = {2023},
+month = {mar},
+publisher = {The American Astronomical Society},
+volume = {265},
+number = {1},
+pages = {30},
+author = {Edgar Eggert and Boris Leistedt},
+title = {Spurious Correlations between Galaxies and Multiepoch Image Stacks in the DESI Legacy Surveys},
+journal = {The Astrophysical Journal Supplement Series},
+abstract = {A nonnegligible source of systematic bias in cosmological analyses of galaxy surveys is the on-sky modulation that is caused by foregrounds and variable image characteristics, such as observing conditions. Standard mitigation techniques perform a regression between the observed galaxy density field and sky maps of the potential contaminants. Such maps are ad hoc lossy summaries of the heterogeneous sets of coadded exposures that contribute to the survey. We present a methodology for addressing this limitation, and we extract spurious correlations between the observed distributions of galaxies and arbitrary stacks of single-epoch exposures. We study four types of galaxies (luminous red galaxies, emission-line galaxies, quasars, and Lyman-break galaxies) in the three regions of the DESI Legacy Surveys (North, South, and Dark Energy Survey), resulting in 12 samples with varying levels and types of contamination. We find that the new technique outperforms the traditional ones in all cases, and is able to remove higher levels of contamination. This paves the way for new methods that extract more information from multiepoch galaxy survey data and mitigate large-scale biases more effectively.}
+}
