--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -1,6 +1,7 @@
 \section{Analysis techniques}
 \label{sec:method} 
-\mc{Ashley: I think somewhere in here (probably near the beginning) you need to describe how the 3 regions are combined, since I think you model their selection function separately and then combine for almost all results shown.}\mr{MR: I mention this at the beginning of 2.1.2 and 4. Do you think I should mention it here too?}
+%\mc{Ashley: I think somewhere in here (probably near the beginning) you need to describe how the 3 regions are combined, since I think you model their selection function separately and then combine for almost all results shown.}
+We address imaging systematics in DESI data by performing a separate treatment for each imaging region (e.g., DECaLS North) within the DESI footprint to reduce the impact of systematic effects specific to that region. Once the imaging regions have been mitigated for systematics, we combine the data from all regions to compute the power spectrum for the entire DESI footprint to increase the overall statistical power and enable more robust measurements of $\fnl$. We then conduct robustness tests on the combined data to assess the significance of any remaining systematic effects.
 
 
 \subsection{Power spectrum estimator}
@@ -26,7 +27,7 @@ The estimator in Equation \ref{eq:pusedocell} yields a biased power spectrum whe
 The other theoretical systematic issues are however subdominant in the angular power spectrum. For instance, relativistic effects generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of the 3D power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate the galaxy 3D power spectrum \citep{castorina2020JCAP}. In a similar way, the peculiar motion of the observer can mimic a PNG-like scale-dependent signature through aberration, magnification and the Kaiser-Rocket effect, i.e., a systematic dipolar apparent blue-shifting in the direction of the observer's peculiar motion \citep{2021JCAP...11..027B}.
   
 \subsubsection{Angular power spectrum}
-\mc{Santi: would nonlinear power spectrum matter? MR: Somewhere here we should mention that the nonlinear P(k) matter does not matter, as those scales are not used. Maybe provide a reference. I can also re-run using a nonlinear P(k).} 
+%\mc{Santi: would nonlinear power spectrum matter? MR: Somewhere here we should mention that the nonlinear P(k) matter does not matter, as those scales are not used. Maybe provide a reference. I can also re-run using a nonlinear P(k).} 
 The relationship between the linear matter power spectrum $P(k)$ and the projected angular power spectrum of galaxies is expressed by the following equation:
 \begin{equation}\label{eq:cell}
 C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
@@ -74,10 +75,11 @@ The lognormal simulations are used to validate our survey window and integral co
 Our parameter inference uses standard MCMC sampling. A constant clustering amplitude is assumed to determine the redshift evolution of the linear bias of our DESI LRG targets, $b(z) = b/D(z)$, which is supported by the HOD fits to the angular power spectrum \citep{zhou2021clustering}. In MCMC, we allow $\fnl$, $N_{\rm shot}$, and $b$ to vary, while all other cosmological parameters are fixed at the fiducial values (see \S \ref{ssec:mocks}). The galaxy power spectrum is divided into a discrete set of bandpower bins with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$. Each clustering mode is weighted by $2\ell+1$ when averaging over the modes in each bin.
 
 The expected large-scale power is highly sensitive to the value of $\fnl$ such that the the amplitude of the covariance for $C_{\ell}$ is influenced by the true value of $\fnl$ \citep[see, e.g.,][for a discussion]{2013MNRAS.428.1116R}. As illustrated in the top row of Figure \ref{fig:histcell}, we find that the distribution of the power spectrum at the lowest bin, $2\leq \ell < 4$, is highly asymmetric and its standard deviation varies significantly from the simulations with $\fnl=0$ to $76.9$. We can make the covariance matrix less sensitive to $\fnl$ by taking the log transformation of the power spectrum, $\log C_{\ell}$. As shown in the bottom panels in Figure \ref{fig:histcell}, the log transformation reduces the asymmetry and the difference in the standard deviations between the $\fnl=0$ and $76.9$ simulations. Therefore, we minimize a negative likelihood defined as,
-\begin{equation}
+\begin{equation}\label{eq:likelihood}
 -2\ln\mathcal{L} = (\log \tilde{C}(\Theta)-\log \tilde{C})^{\dagger} \mathbb{C}^{-1} (\log \tilde{C}(\Theta)-\log \tilde{C}),
 \end{equation}
-where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\rm shot}$; $\tilde{C}(\Theta)$ is the (binned) expected pseudo-power spectrum; $\tilde{C}$ is the (binned) measured pseudo-power spectrum; and $\mathbb{C}$ is the covariance on $\log\tilde{C}$ constructed from the $\fnl=0$ simulations. Flat priors are implemented for all parameters: $\fnl \in [-1000, 1000]$, $N_{\rm shot} \in [-0.001, 0.001]$, and $b \in [0, 5]$. \mc{Anna: Some readers might wonder if the covariance estimated from the lognormal mocks is accurate enough. Could you add maybe some lines justifying this?}\mr{effect of mitigation (no weight clean mocks vs mitigated cont mocks)? whether lognormal is ok here? ask Anna for references about how well lognormal mocks can be employed.}
+where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\rm shot}$; $\tilde{C}(\Theta)$ is the (binned) expected pseudo-power spectrum; $\tilde{C}$ is the (binned) measured pseudo-power spectrum; and $\mathbb{C}$ is the covariance on $\log\tilde{C}$ constructed from the $\fnl=0$ simulations. Flat priors are implemented for all parameters: $\fnl \in [-1000, 1000]$, $N_{\rm shot} \in [-0.001, 0.001]$, and $b \in [0, 5]$. %\mc{Anna: Some readers might wonder if the covariance estimated from the lognormal mocks is accurate enough. Could you add maybe some lines justifying this?}
+%\mc{effect of mitigation (no weight clean mocks vs mitigated cont mocks)? whether lognormal is ok here? ask Anna for references about how well lognormal mocks can be employed.}
 
 
 \begin{figure*}
@@ -91,8 +93,26 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 
 \subsection{Characterization of remaining systematics}
 \label{ssec:characterization}
-\mc{Edmond: compute these for each sub-survey.} 
-We briefly summarize two statistical tests based on the mean galaxy density contrast and the cross power spectrum between the galaxy density and the imaging systematic maps to assess the quality of the data and the significance of the remaining systematic effects \cite[see, also,][]{rezaie2021primordial}. We calculate these statistics and compare the values to those measured from the clean mocks before looking at the auto power spectrum of the DESI LRG targets.
+%\mc{Edmond: compute these for each sub-survey.} 
+One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
+One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
+One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
+One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data are too strong that remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach, due to the increased degree of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling these spurious density fluctuations. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are identified to have a negligible impact on Baryon Acoustic Oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction, if possible, by reducing the dimensionality of the problem, in the hope of ensuring that the constraints are as accurate and reliable as possible. 
+
+Our goal is to reduce the correlations between the DESI LRG target density and the imaging systematic maps, while controlling the over correction effect.  In \S \ref{ssec:characterization}, we describe how we achieve this objective, by employing a series of simulations along with statistical methods that involve calculating the cross power spectrum between the LRG density and imaging maps, and the mean LRG density as a function of imaging. to identify different sets of the imaging systematic maps:
+\begin{enumerate}[itemindent=*]
+\item \textbf{Two maps}: Extinction, depth in z.
+\item \textbf{Three maps}: Extinction, depth in z, psfsize in r.
+\item \textbf{Four maps}: Extinction, depth in z, psfsize in r, stellar density.
+\item \textbf{Five maps}: Extinction, depth in z, psfsize in r, neutral hydrogen density, and photometric calibration in z.
+\item \textbf{Eight maps}: Extinction, depth in $grzW1$, psfsize in $grz$.
+\item \textbf{Nine maps}: Extinction, depth in $grzW1$, psfsize in $grz$, stellar density.
+\end{enumerate}
+
+%\mc{Santi: Elaborate how these maps are selected. Edmond: You can comment a bit on the different combinations; why / how do you decide which combination we want ? (maybe just say that it is explained below, your sentence on visual inspection). Alex: Throughout—I think it would be clearer if you always referred to every method with 2 labels, “[linear/nonlinear] [map name]”.} 
+It is imperative to note that these sets are selected prior to examining the auto power spectrum of the LRG sample and unblinding the $\fnl$ constraints; and that the auto power spectrum and $\fnl$ measurements are \textit{unblinded} only after our mitigation methods passed our rigorous tests for residual systematics. 
+
+
 
 \begin{figure*}
 \centering
@@ -131,7 +151,7 @@ With this normalization, $\tilde{C}_{x_{i}}$ estimates the contribution of syste
 \end{equation}
 where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the LRG sample with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
 
-Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There is less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in r) as identified from the Pearson correlation. With linear two maps (dot-dashed blue curve), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Very likely, large-scale cross correlations ($\ell < 6$) are reduced using extinction and depth in the z-band, but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (dotted orange curve) approach alleviates the cross power spectrum against psfsize in r. On the other hand, nonlinear three maps can reduce the cross correlations against both the r and z-band psfsize maps, which indicates the benefit of using a nonlinear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps and nonlinear four maps. 
+We identify extinction and depth in the z band as two primary maps, and run the linear model with these two maps to derive the systematic weights. Linear two maps is the most conservative method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects, and find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations of the DESI LRG sample and imaging systematic maps. Additionally, we consider neural network with four, five, and nine maps to further examine the robustness of our cleaning methods. Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There is less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in r) as identified from the Pearson correlation. With linear two maps (dot-dashed blue curve), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Very likely, large-scale cross correlations ($\ell < 6$) are reduced using extinction and depth in the z-band, but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (dotted orange curve) approach alleviates the cross power spectrum against psfsize in r. On the other hand, nonlinear three maps can reduce the cross correlations against both the r and z-band psfsize maps, which indicates the benefit of using a nonlinear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps and nonlinear four maps. 
 
 \subsubsection{Mean density contrast}
 We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property, $x_{j}$:
@@ -173,18 +193,18 @@ Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cr
 \end{table}
 
 
-\mc{Ashley: Add something at the end to clarify the reason that the extinction map can cause the stellar density trend is that they are strongly correlated.} 
+%\mc{Ashley: Add something at the end to clarify the reason that the extinction map can cause the stellar density trend is that they are strongly correlated.} 
 Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. Similar to the cross power spectrum test, we find consistent results for the mean density diagnostic regardless of the underlying true $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The $p$-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize reduces the error to $\chi^{2}=130$ but the remaining systematics remain statistically significant with $p$-value $=0$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and $p$-value of $0.08$. However, as noted earlier, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. On the other hand, we obtain a $\chi^{2}$ value of $74.3$ with $p$-value $=0.39$ with the imaging weights from the \textit{nonlinear three maps} approach. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and $p$-value $=0.42$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction because of the strong correlation between these two properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
 
 
 
-\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)}
-The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. On the other hand, the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value $=0$ and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
+%\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)}
+The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. Moreover, we should not select the model with four maps, which includes stellar density, as our best model to avoid the confirmation bias, since we do not have other indicators showing this model is more reasonable than the one with three maps. On the other hand, the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value $=0$ and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
 
 
 \subsection{Calibration of mitigation bias}\label{ssec:calibration}
 
-\mc{Santi: How all of this was computed did not seem very clear to me. It seems that this part is what later determines that fnl!=0 from the data. So I think it would be worth explaining it more. Ashley: I would find a way to *strongly* emphasize that the result does not depend at all on how the mocks were contaminated. Perhaps just a concluding sentence or two in its own paragraph along the lines. Ashley: It is important to note that we find nearly identical results for the mitigation bias whether or not the mocks have any contamination. This can be seen by observing the solid and dashed curves displayed on Fig. 9}
+%\mc{Santi: How all of this was computed did not seem very clear to me. It seems that this part is what later determines that fnl!=0 from the data. So I think it would be worth explaining it more. Ashley: I would find a way to *strongly* emphasize that the result does not depend at all on how the mocks were contaminated. Perhaps just a concluding sentence or two in its own paragraph along the lines. Ashley: It is important to note that we find nearly identical results for the mitigation bias whether or not the mocks have any contamination. This can be seen by observing the solid and dashed curves displayed on Fig. 9}
 The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are used for the regression. We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. We applied the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
 
 
@@ -199,7 +219,7 @@ To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the
 
 \begin{table}
 \begin{center}
-\caption{Linear parameters employed to de-bias the $\fnl$ constraints to account for the over-correction issue. \mc{Ashley: You could also add the m1/m2 to the table for the clean mock case?}
+\caption{Linear parameters employed to de-bias the $\fnl$ constraints to account for the over-correction issue. %\mc{Ashley: You could also add the m1/m2 to the table for the clean mock case?}
 }\label{tab:debiasparams}
 \begin{tabular}{lcc}
 \hline
