--- a/sections/results.tex
+++ b/sections/results.tex
@@ -3,12 +3,12 @@
 This section presents our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
 
 
-\begin{figure*}
+\begin{figure}
     \centering
-    \includegraphics[width=0.9\textwidth]{figures/model_dr9.pdf} 
+    \includegraphics[width=0.47\textwidth]{figures/model_dr9.pdf} 
     \caption{The angular power spectrum of the DESI LRG targets before (\textit{No weight}) and after correcting for imaging systematics using the linear and non-linear methods with their corresponding best-fitting theory curves. The solid curve and grey shade respectively represent the mean power spectrum and $68\%$ error from the $\fnl=0$ mocks.}
     \label{fig:cl_dr9}
-\end{figure*}
+\end{figure}
 
 
 \subsection{DESI imaging LRG sample}
@@ -49,7 +49,7 @@ DESI & Nonlinear Nine Maps& $ 50$& $ 42$& $ 13<\fnl< 69$& $-16<\fnl< 92$ &   39.
 \begin{figure}
     \raggedleft
     \includegraphics[width=0.435\textwidth, trim={0 1.4cm 0 0},clip]{mcmc_dr9methods1d.pdf}
-    \includegraphics[width=0.46\textwidth, trim={0 0 0.15cm 0.2cm},clip]{figures/mcmc_dr9methods.pdf} 
+    \includegraphics[width=0.47\textwidth, trim={0 0 0.15cm 0.2cm},clip]{figures/mcmc_dr9methods.pdf} 
     \caption{The calibrated constrains from the DESI LRG targets. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DESI LRG targets before and after applying non-linear cleaning methods. The lognormal mocks are used to calibrate these distributions for over correction.}\label{fig:mcmc_dr9}
 \end{figure}
 
